// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`signup saga: should handle a 200 status response should dispatch 'fillUsers' action 1`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "payload": Object {
        "avatar": "TEST_AVATAR",
        "firstName": "Walter",
        "id": "TEST_ID",
        "lastName": "White",
        "token": "TEST_TOKEN",
      },
      "type": "FILL_USERS",
    },
    "channel": null,
  },
}
`;

exports[`signup saga: should handle a 200 status response should dispatch 'stopFetching' action 1`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "type": "STOP_FETCHING",
    },
    "channel": null,
  },
}
`;
